# SFML-Test

./: .gitignore  CMakeLists.txt  README.md
data/maps/: map2.json  room0.json  room1.json  room2.json
include/: ExitTile.hpp  ExploreState.hpp  Game.hpp  GameState.hpp  GrassTile.hpp  Map.hpp  MapLoader.hpp  Player.hpp  Tile.hpp  WallTile.hpp
src/: ExploreState.cpp  Game.cpp  GrassTile.cpp  Map.cpp  Player.cpp  Tile.cpp  WallTile.cpp  jsonTest.cpp  main.cpp
